Implemented change requests from @Isiepel (and Copilot)